--- a/cf/irsa-api-role.yaml
+++ b/cf/irsa-api-role.yaml
@@ -236,7 +236,7 @@ Resources:
                 Action:
                   - "rds-db:connect"
                 Resource:
-                  - !Sub "arn:aws:rds-db:${AWS::Region}:${AWS::AccountId}:dbuser:aurora-cluster-${Environment}-*/api_role"
+                  - !Sub "arn:aws:rds-db:${AWS::Region}:${AWS::AccountId}:dbuser:*/api_role"
               - Effect: Allow
                 Action:
                   - "rds:DescribeDBClusterEndpoints"
