--- a/cf/rds-agent.yaml
+++ b/cf/rds-agent.yaml
@@ -48,7 +48,7 @@ Resources:
                 Action:
                   - "rds-db:connect"
                 Resource: 
-                  - !Sub "arn:aws:rds-db:${AWS::Region}:${AWS::AccountId}:dbuser:aurora-cluster-${Environment}-*/dev_role"
+                  - !Sub "arn:aws:rds-db:${AWS::Region}:${AWS::AccountId}:dbuser:*/dev_role"
               - Effect: Allow
                 Action:
                   - "rds:DescribeDBClusterEndpoints"
