Add pass rdsinvokelambdarole

--- a/cf/developer-access-group.yaml
+++ b/cf/developer-access-group.yaml
@@ -96,7 +96,9 @@ Resources:
               - Effect: Allow
                 Action:
                   - "iam:PassRole"
-                Resource: !Sub "arn:aws:iam::${AWS::AccountId}:role/ui-auth-user-role-${Environment}"
+                Resource: 
+                  - !Sub "arn:aws:iam::${AWS::AccountId}:role/ui-auth-user-role-${Environment}"
+                  - !Sub "arn:aws:iam::${AWS::AccountId}:role/biomage-rds-${Environment}-RDSInvokeLambdaRole-*"
 
         - PolicyName: "can-manage-own-password-and-mfa"
           PolicyDocument:
