--- a/.github/workflows/deploy-changed-cf.yaml
+++ b/.github/workflows/deploy-changed-cf.yaml
@@ -251,25 +251,14 @@ jobs:
         with:
           string: ${{ matrix.environment-type }}
 
-      - id: get-rds-secrets
-        name: Export RDS secrets into environment variables
-        uses: abhilash1in/aws-secrets-manager-action@v2.0.0
+      - id: rds-secrets
+        uses: t-botz/aws-secrets-manager-read-action@v2
+        name: Outputs RDS secrets to get into the db
         with:
-          secrets: aurora-${{ matrix.environment-type }}
-          parse-json: true
-
-      - id: check-rds-secrets
-        name: Check RDS secrets are fetched
-        run: |-
-          # These checks if the RDS username and passwords are set
-          if [ -z $AURORA_${{ steps.setup-rds-env.outputs.uppercase }}_USERNAME ]; then
-            echo "RDS username not provided"
-            exit 1
-          fi
-          if [ -z $AURORA_${{ steps.setup-rds-env.outputs.uppercase }}_PASSWORD ]; then
-            echo "RDS password not provided"
-            exit 1
-          fi
+          secret-id: aurora-${{ matrix.environment-type }}-default
+          mask-value: true
+          mask-json-values: true
+          keys-as-outputs: true
 
       - id: setup-rds-roles
         name: Setup RDS roles for default RDS instances
@@ -294,21 +283,21 @@ jobs:
             exit 1
           fi
           SETUP_ROLES_CMD="
-            PGPASSWORD=\'${AURORA_${{ steps.setup-rds-env.outputs.uppercase }}_PASSWORD}\' psql \
+            PGPASSWORD=\'${AURORA_PASSWORD}\' psql \
               --host=${RDSHOST} \
               --port=5432 \
-              --username=${AURORA_${{ steps.setup-rds-env.outputs.uppercase }}_USERNAME} \
+              --username=${AURORA_USERNAME} \
               --dbname=aurora_db <<EOF
                 CREATE ROLE api_role WITH LOGIN;
                 CREATE ROLE dev_role WITH LOGIN;
                 GRANT USAGE ON SCHEMA public TO api_role;
                 GRANT USAGE, SELECT ON ALL SEQUENCES IN SCHEMA public to api_role;
-                GRANT dev_role TO ${AURORA_${{ steps.setup-rds-env.outputs.uppercase }}_USERNAME};
+                GRANT dev_role TO ${AURORA_USERNAME};
                 ALTER DEFAULT PRIVILEGES FOR USER dev_role IN SCHEMA public GRANT SELECT, INSERT, UPDATE, DELETE ON TABLES TO api_role;
                 ALTER DEFAULT PRIVILEGES FOR USER dev_role IN SCHEMA public GRANT USAGE, SELECT ON SEQUENCES TO api_role;
-                REVOKE dev_role FROM ${AURORA_${{ steps.setup-rds-env.outputs.uppercase }}_USERNAME};
+                REVOKE dev_role FROM ${AURORA_USERNAME};
                 GRANT rds_iam TO api_role;
-                GRANT rds_iam, ${AURORA_${{ steps.setup-rds-env.outputs.uppercase }}_USERNAME} TO dev_role;
+                GRANT rds_iam, ${AURORA_USERNAME} TO dev_role;
               EOF"
 
           aws ssm send-command --instance-ids "$INSTANCE_ID" \
@@ -316,6 +305,8 @@ jobs:
             --parameters "commands='$SETUP_ROLES_CMD'"
         env:
           REGION: ${{ secrets.AWS_REGION }}
+          AURORA_USERNAME: ${{ steps.rds-secrets.outputs.username }}
+          AURORA_PASSWORD: ${{ steps.rds-secrets.outputs.password }}
 
   report-if-failed:
     name: Report if workflow failed
