allow developers to filter cw logs

--- a/cf/developer-access-group.yaml
+++ b/cf/developer-access-group.yaml
@@ -25,7 +25,7 @@ Resources:
         - arn:aws:iam::aws:policy/AmazonRoute53ReadOnlyAccess
         - arn:aws:iam::aws:policy/ElasticLoadBalancingReadOnly
         - arn:aws:iam::aws:policy/AmazonEC2ContainerRegistryReadOnly
-        - arn:aws:iam::aws:policy/AmazonCognitoPowerUser  
+        - arn:aws:iam::aws:policy/AmazonCognitoPowerUser
         - arn:aws:iam::aws:policy/AWSLambda_FullAccess
       Policies:
         - PolicyName: !Sub "can-manage-${Environment}-sqs"
@@ -46,6 +46,7 @@ Resources:
                   - "cloudwatch:Describe*"
                   - "cloudwatch:Get*"
                   - "cloudwatch:List*"
+                  - "cloudwatch:logs:FilterLogEvents"
                   - "logs:Get*"
                   - "logs:Describe*"
                   - "sns:Get*"
