permission to query and filter

--- a/cf/developer-access-group.yaml
+++ b/cf/developer-access-group.yaml
@@ -46,9 +46,12 @@ Resources:
                   - "cloudwatch:Describe*"
                   - "cloudwatch:Get*"
                   - "cloudwatch:List*"
-                  - "cloudwatch:logs:FilterLogEvents"
                   - "logs:Get*"
                   - "logs:Describe*"
+                  - "logs:FilterLogEvents"
+                  - "logs:StartQuery"
+                  - "logs:StopQuery"
+                  - "logs:PutQueryDefinition"
                   - "sns:Get*"
                   - "sns:List*"
                 Resource: "*"
