fix arn and add to comment

--- a/infra/cf-iac-secret-key.yaml
+++ b/infra/cf-iac-secret-key.yaml
@@ -1,5 +1,6 @@
 # Note: this CF template is a /prerequisite/ to IAC working properly.
 # It is therefore not able to be set up by IAC directly.
+# it needs to be deployed manually in AWS CF console
 # `biomage-utils` will set up and manage this CF template when
 # new infrastructure is deployed.
 
@@ -32,7 +33,7 @@ Resources:
         - Sid: allow-decryption-to-iac-user
           Effect: Allow
           Principal:
-            AWS: !Sub "arn:aws:iam::${AWS::AccountId}:user/ci-users/iac/ci-user-iac"
+            AWS: !Sub "arn:aws:iam::${AWS::AccountId}:user/ci-user-iac"
           Action:
           - kms:DescribeKey
           - kms:Decrypt
