--- a/.github/workflows/deploy-staging.yaml
+++ b/.github/workflows/deploy-staging.yaml
@@ -26,7 +26,7 @@ jobs:
   deploy-staging:
     name: Deploy staging environment
     runs-on: ubuntu-20.04
-    environment: Biomage
+    environment: HMS
     steps:
       - id: setup-aws
         name: Configure AWS credentials
