--- a/.github/workflows/deploy-infra.yaml
+++ b/.github/workflows/deploy-infra.yaml
@@ -257,17 +257,17 @@ jobs:
         run: |-
           CONFIG_FILE="infra/account-config.yaml"
 
-          yq w -i -d0 $CONFIG_FILE myAccount.domainName --style=double "$DOMAIN_NAME"
-          yq w -i -d0 $CONFIG_FILE myAccount.region --style=double "$AWS_REGION"
-          yq w -i -d0 $CONFIG_FILE myAccount.accountId --style=double "$AWS_ACCOUNT_ID"
-          yq w -i -d0 $CONFIG_FILE myAccount.acmCertificate --style=double "${{ secrets.ACM_CERTIFICATE_ARN }}"
-          yq w -i -d0 $CONFIG_FILE myAccount.datadogEnabled --style=double "false"
-          yq w -i -d0 $CONFIG_FILE myAccount.datadogApiKey --style=double ""
+          yq w -d0 -i $CONFIG_FILE myAccount.domainName --style=double "$DOMAIN_NAME"
+          yq w -d0 -i $CONFIG_FILE myAccount.region --style=double "$AWS_REGION"
+          yq w -d0 -i $CONFIG_FILE myAccount.accountId --style=double "$AWS_ACCOUNT_ID"
+          yq w -d0 -i $CONFIG_FILE myAccount.acmCertificate --style=double "${{ secrets.ACM_CERTIFICATE_ARN }}"
+          yq w -d0 -i $CONFIG_FILE myAccount.datadogEnabled --style=double "false"
+          yq w -d0 -i $CONFIG_FILE myAccount.datadogApiKey --style=double ""
 
           if [[ $ENVIRONMENT_NAME = "Biomage" ]]
           then
-            yq w -i -d0 $CONFIG_FILE myAccount.datadogEnabled --style=double "true"
-            yq w -i -d0 $CONFIG_FILE myAccount.datadogApiKey --style=double "${{ secrets.DATADOG_API_KEY }}"
+            yq w -d0 -i $CONFIG_FILE myAccount.datadogEnabled --style=double "true"
+            yq w -d0 -i $CONFIG_FILE myAccount.datadogApiKey --style=double "${{ secrets.DATADOG_API_KEY }}"
           fi
 
           cat $CONFIG_FILE
