--- a/.github/workflows/deploy-infra.yaml
+++ b/.github/workflows/deploy-infra.yaml
@@ -242,6 +242,19 @@ jobs:
           echo "::set-output name=primary-domain-name::$PRIMARY_DOMAIN_NAME"
           echo "::set-output name=domain-name::$DOMAIN_NAME"
 
+      - id: setup-monitoring
+        name: Determine if monitoring should be enabled for this deployment
+        run: |-
+          DATADOG_ENABLED=false
+
+          if [[ $ENVIRONMENT_NAME = "Biomage" ]]
+          then
+            DATADOG_ENABLED=true
+          fi
+          
+          echo "DATADOG_ENABLED: $DATADOG_ENABLED"
+          echo "::set-output name=datadog-enabled::$DATADOG_ENABLED"
+
       - id: install-yq
         name: Install yq for modifying the deployment spec.
         run: |-
@@ -254,6 +267,7 @@ jobs:
           AWS_ACCOUNT_ID: ${{ steps.setup-aws.outputs.aws-account-id }}
           DOMAIN_NAME: ${{ steps.setup-domain.outputs.domain-name }}
           ENVIRONMENT_NAME: ${{ matrix.environment-name }}
+          DATADOG_ENABLED: ${{ steps.setup-monitoring.outputs.datadog-enabled }}
         run: |-
           CONFIG_FILE="infra/account-config.yaml"
 
@@ -264,7 +278,7 @@ jobs:
           yq w -d0 -i $CONFIG_FILE myAccount.datadogEnabled --style=double "false"
           yq w -d0 -i $CONFIG_FILE myAccount.datadogApiKey --style=double ""
 
-          if [[ $ENVIRONMENT_NAME = "Biomage" ]]
+          if [[ $DATADOG_ENABLED = "true" ]]
           then
             yq w -d0 -i $CONFIG_FILE myAccount.datadogEnabled --style=double "true"
             yq w -d0 -i $CONFIG_FILE myAccount.datadogApiKey --style=double "${{ secrets.DATADOG_API_KEY }}"
@@ -530,7 +544,7 @@ jobs:
 
       - id: setup-datadog-sidecar-permissions
         name: Setup Datadog sidecar permissions
-        if: matrix.environment-name == 'Biomage'
+        if: ${{ steps.setup-monitoring.outputs.datadog-enabled == 'true' }}
         run: |-
           ### Create ClusterRoles for Datadog sidecar deployments
           kubectl apply -f infra/datadog/datadog-sidecar-rbac.yaml
