--- a/.github/workflows/delete-unused-step-functions.yaml
+++ b/.github/workflows/delete-unused-step-functions.yaml
@@ -82,7 +82,7 @@ jobs:
 
       - id: send-to-slack
         name: Send failure notification to Slack
-        # if: failure() && github.ref == 'refs/heads/master'
+        if: failure()
         env:
           SLACK_BOT_TOKEN: ${{ secrets.WORKFLOW_STATUS_BOT_TOKEN }}
         uses: voxmedia/github-action-slack-notify-build@v1
