Read flux mode from a workflow config. Introduce public-facing notion for the platform

--- a/.github/workflows/deploy-infra.yaml
+++ b/.github/workflows/deploy-infra.yaml
@@ -250,24 +250,25 @@ jobs:
       - id: fill-account-specific-metadata
         name: Fill in account specific metadata in ConfigMap
         run: |-
-          yq w -d0 infra/account-config.yaml myAccount.domainName --style=double "$DOMAIN_NAME" \
+          yq w -d0 infra/config/account-config.yaml myAccount.domainName --style=double "$DOMAIN_NAME" \
           | yq w -d0 - myAccount.region --style=double "$AWS_REGION" \
           | yq w -d0 - myAccount.accountId --style=double "$AWS_ACCOUNT_ID" \
           | yq w -d0 - myAccount.acmCertificate --style=double "${{ secrets.ACM_CERTIFICATE_ARN }}" \
           | yq w -d0 - myAccount.datadogApiKey --style=double "${{ secrets.DATADOG_API_KEY }}" \
-          > infra/account-config.yaml
+          > infra/config/account-config.yaml
 
-          cat infra/account-config.yaml
+          cat infra/config/account-config.yaml
         env:
           AWS_REGION: ${{ secrets.AWS_REGION }}
           AWS_ACCOUNT_ID: ${{ steps.setup-aws.outputs.aws-account-id }}
           DOMAIN_NAME: ${{ steps.setup-domain.outputs.domain-name }}
 
+      # TODO remove the temp account-config-2 done for testing
       - id: create-account-information-configmap
         name: Create a configmap containing AWS account specific details
         continue-on-error: false
         run: |-
-          kubectl create configmap account-config --from-file=infra/account-config.yaml -n flux -o yaml --dry-run | kubectl apply -f -
+          kubectl create configmap account-config-2 --from-file=infra/config/account-config.yaml -n flux -o yaml --dry-run | kubectl apply -f -
 
       - id: install-fluxctl
         name: Install fluxctl
@@ -334,11 +335,19 @@ jobs:
               --set acmCertificate=${{ secrets.ACM_CERTIFICATE_ARN }} \
               --install --wait
 
+      - id: platform-public-facing
+        name: Get Flux mode
+        uses: mikefarah/yq@master
+        with:
+          cmd: yq '.[env(ENVIRONMENT_NAME)].publicFacing' 'infra/config/workflow-config.yaml'
+        env:
+          ENVIRONMENT_NAME: ${{ matrix.environment-name }}
+
       - id: deploy-env-loadbalancer
         name: Deploy AWS Application Load Balancer for environment
         uses: aws-actions/aws-cloudformation-github-deploy@v1
         with:
-          parameter-overrides: "Environment=${{ matrix.environment-type }}"
+          parameter-overrides: "Environment=${{ matrix.environment-type }},PublicFacing=${{ steps.platform-public-facing.outputs.result }}"
           name: "biomage-k8s-alb-${{ matrix.environment-type }}"
           template: 'infra/cf-loadbalancer.yaml'
           no-fail-on-empty-changeset: "1"
@@ -352,19 +361,27 @@ jobs:
           template: 'infra/cf-route53.yaml'
           no-fail-on-empty-changeset: "1"
 
+      - id: flux-git-read-only
+        name: Get Flux mode
+        uses: mikefarah/yq@master
+        with:
+          cmd: yq '.[env(ENVIRONMENT_NAME)].fluxGitReadOnly' 'infra/config/workflow-config.yaml'
+        env:
+          ENVIRONMENT_NAME: ${{ matrix.environment-name }}
+
       - id: install-flux
         name: Deploy flux
         run: |-
           helm repo add fluxcd https://charts.fluxcd.io
           kubectl apply -f https://raw.githubusercontent.com/fluxcd/helm-operator/master/deploy/crds.yaml
 
-          FLUX_GIT_READ_ONLY=true
-          GIT_URL=https://github.com/${{ env.RELEASES_REPOSITORY }}
+          FLUX_GIT_READ_ONLY=${{ steps.flux-git-read-only.outputs.result }}
+          echo $FLUX_GIT_READ_ONLY
 
-          if [[ $ENVIRONMENT_NAME = "Biomage" ]]
-          then
-            FLUX_GIT_READ_ONLY=false
+          if [[ $FLUX_GIT_READ_ONLY = "false" ]]; then
             GIT_URL=git@github.com:${{ env.RELEASES_REPOSITORY }}
+          elif [[ $FLUX_GIT_READ_ONLY = "true" ]]; then
+            GIT_URL=https://github.com/${{ env.RELEASES_REPOSITORY }}
           fi
 
           echo "Github URL: "
@@ -393,13 +410,13 @@ jobs:
 
       - id: get-public-key
         name: Get flux SSH deploy key
-        if: matrix.environment-name == 'Biomage'
+        if: steps.flux-git-read-only.outputs.result == 'false'
         run: |-
           fluxctl identity --k8s-fwd-ns flux | tee ~/flux.pub
 
       - id: add-key-to-github
         name: Add Flux deploy key to GitHub repository
-        if: matrix.environment-name == 'Biomage'
+        if: steps.flux-git-read-only.outputs.result == 'false'
         run: |-
           # find existing key IDs. save them to a file
           curl \
